@@ -64,6 +64,9 @@ case "$host_alias" in
     ;;
 *)  dnl libtoolize requires that the following not be indented
 AC_PROG_LIBTOOL
+    if test "x$LTFLAGS" = "x"; then
+        LTFLAGS='--silent'
+    fi
     ;;
 esac
 
@@ -71,21 +74,23 @@ AC_ARG_ENABLE(libtool, [--with-libtool   use libtool to link the library],
   [ use_libtool=$withval ], [ use_libtool="yes" ] )
  
 if test "x$use_libtool" = "xyes"; then
-      lt_compile="\$(LIBTOOL) --mode=compile \$(LTFLAGS) \$(COMPILE) -c \$< && touch \$@"
-      link="\$(LIBTOOL) --mode=link \$(LTFLAGS) \$(COMPILE) \$(LDFLAGS) -o \$@"
-      so_ext="lo"
-      lib_target="-rpath \$(libdir) \$\$objects"
+      lt_compile='$(LIBTOOL) $(LTFLAGS) --mode=compile $(COMPILE) -c $< && touch $@'
+      link='$(LIBTOOL) $(LTFLAGS) --mode=link $(LT_LDFLAGS) $(COMPILE) $(LDFLAGS) -o $@'
+      so_ext='lo'
+      lib_target='-rpath $(libdir) $$objects'
 else
-      lt_compile="\$(COMPILE) -c \$<"
-      link="ar cr \$(TARGET_LIB) \$\$objects; ranlib \$(TARGET_LIB)"
-      so_ext="o"
-      lib_target=""
+      lt_compile='$(COMPILE) -c $<'
+      link='$(AR) cr $(TARGET_LIB) $$objects; $(RANLIB) $(TARGET_LIB)'
+      so_ext='o'
+      lib_target=''
 fi
 
 AC_SUBST(lt_compile)
 AC_SUBST(link)
 AC_SUBST(so_ext)
 AC_SUBST(lib_target)
+AC_SUBST(LTFLAGS)
+AC_SUBST(LT_LDFLAGS)
 
 dnl
 dnl grab flags from APR.
